# voxel-cmake

./: CMakeLists.txt  README.md
include/: base.h  gradientnoise.h  shaders.h
include/glad/: glad.h
src/: base.cpp  glad.c  main.cpp
